[tool.poetry]
name = "best_ml_code_practice"
version = "0.1.0"
description = ""
authors = ["starboy <starboy@google.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
scikit-learn = "^1.3.1"
pandas = "^2.1.1"
pydantic-settings = "^2.0.3"
loguru = "^0.7.2"
sqlalchemy = "^2.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
